# Packing-Assistant

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  api_key_load.py  main.py
backend/agents/: __init__.py  budget_agent.py  packing_agent.py  prompts.py  suggestion_agent.py  weather_agent.py
backend/api_clients/: __init__.py  accommodation_api.py  amadues_api_client.py  car_rental_api.py  flight_api.py  hotel_rental_api.py  travel_search_api.py  weather_data.py
backend/intents/: __init__.py  packing_agent_intents.py  rest_agent_intents.py
