[project]
name = "packing-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "opensky-api",
    "python-opensky>=0.2.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
opensky-api = { path = "../../opensky-api/python" }
